--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 tgcrypto
-asyncio
 ffmpeg-python
-py-tgcalls==0.8.1
+py-tgcalls==0.8.6
 pyrogram==1.4.12
 youtube-search-python==1.4.9
-yt_dlp
-youtube_dl
-youtube-search
+yt-dlp
 python-dotenv
 dnspython
 gitpython
@@ -24,6 +21,6 @@ wget
 pyyaml==5.3.1
 speedtest-cli
 telegraph
-python-arq
+arq
 bs4
 python-telegram-bot==13.11
